--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "developer-portfolio-starter-code",
+  "name": "who-is-igor-bayerl",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "^18.15.13",
-    "@types/react": "^18.0.38",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "framer-motion": "^10.6.0",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
-    "typescript": "^5.0.4"
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.12",
+    "eslint": "9.34.0",
+    "eslint-config-next": "15.5.2",
+    "framer-motion": "^12.23.12",
+    "next": "15.5.2",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "react-icons": "^5.5.0",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.2.7"
   }
 }
